--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Who Am I?</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -314,7 +314,7 @@
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">October 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -351,7 +351,7 @@
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">October 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -388,7 +388,7 @@
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">October 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -425,7 +425,7 @@
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">October 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -462,7 +462,7 @@
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">October 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -499,7 +499,7 @@
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">October 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
