--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> More About Me
                     </a>
                 </div>
             </div>
@@ -277,7 +277,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; Portfolio - Ana Feliz Q. Rilloraza 2016
                     </div>
                 </div>
             </div>
