--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Ana Feliz Rilloraza</span>
+                        <span class="name">Ana Feliz Q. Rilloraza</span>
                         <hr class="star-light">
                         <span class="skills">Technology is a useful servant but a dangerous master!</span>
                     </div>
