--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/lo2ss.png" class="img-responsive img-centered" alt="">
-                            <p>This area shows the <a href="https://anarilloraza.github.io/Layout2/">first layout</a> I am developing for our online shop.</p>
+                            <p>This area shows the <a href="https://anarilloraza.github.io/Layout2/">second layout</a> I am developing for our online shop.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -455,7 +455,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/lo3ss.png" class="img-responsive img-centered" alt="">
-                            <p>This area shows the <a href="https://anarilloraza.github.io/Layout3/">first layout</a> I am developing for our online shop.</p>
+                            <p>This area shows the <a href="https://anarilloraza.github.io/Layout3/">third layout</a> I am developing for our online shop.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -492,7 +492,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/lo4ss.png" class="img-responsive img-centered" alt="">
-                            <p>This area shows the <a href="https://anarilloraza.github.io/Layout4/">first layout</a> I am developing for our online shop.</p>
+                            <p>This area shows the <a href="https://anarilloraza.github.io/Layout4/">fourth layout</a> I am developing for our online shop.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
