--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <section class="success" id="who am i?">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -167,10 +167,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I am a living, breathing organism signified by the words ‘human being’. I am a material or physical being fairly recognisable over time to me and to others: I am a body. Through my body, I can move, touch, see, hear, taste and smell. The array of physical sensations available to me also includes pain, hunger, thirst, tiredness, injury, sickness, fear, apprehension and pleasure. In this way I experience myself, others and the world around me. However, there is another aspect of me not directly visible or definable. This is the aspect of me which thinks and feels, reflects and judges, remembers and anticipates. Words used to describe this aspect include ‘mind’, ‘spirit’, ‘heart’, ‘soul’, ‘awareness’ and ‘consciousness’. This part of me is aware that I can never be fully known or understood by myself or by others; it notices that although there may be some unchanging essence which is ‘me’, this same ‘me’ is also constantly changing and evolving.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>So I am a physical body and an emotional and psychological (or spiritual) being. The two together make me a person. Being a person means that I have virtues and flaws, gifts and needs, possibilities and defeats. I am basically good, but I am capable of evil. I am neither an angel nor a monster. Being a person means that I am a social animal, needing connection, recognition and acceptance from others, while simultaneously knowing myself as isolated and solitary, with many experiences which are never fully shareable with others. However, I also realise that this paradoxical condition is a universal experience, and this enables the emergence of empathy and compassion for others as it affords glimpses of understanding and solicitude, mutuality and intimacy. Being a person means that I am like all other persons, but also unique. It also means that I can never provide a genuinely definitive answer to the question "who am i?"</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
