--- a/index.html
+++ b/index.html
@@ -267,8 +267,10 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Who Am I?</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>About Me</h3>
+                        <p>Ana Feliz Q. Rilloraza</p>
+                        <p>Bachelor of Science in Information Technology</p>
+                        <p>University of the Cordilleras</p>
                     </div>
                 </div>
             </div>
