--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
                     <div class="footer-col col-md-4">
                         <h3>About Me</h3>
                         <p>Ana Feliz Q. Rilloraza</p>
-                        <p>Bachelor of Science in Information Technology</p>
-                        <p>University of the Cordilleras</p>
+                        <p>Bachelor of Science in Information Technology, University of the Cordilleras</p>
                     </div>
                 </div>
             </div>
